Version 3.0.0 (March 17, 2022):
- We can now generate passwords with random words!  Bring your own word
  list.

Version 2.0.1 (January 13, 2021):
- Generated passwords are now properly removed from memory once they
  are displayed to the user.  Previously, this did not work, and would
  occasionally create a spurious error message.

Version 2.0.0 (December 12, 2020):
- Initial public release to GitHub and PowerShell Gallery.
- Made SecureString output the default, with the -AsPlainText parameter
  introduced to emulate the earlier behavior from the 1.x versions.
- Help!  There's help now.  Plenty of it.

Versions 1.0.0 (2016) through 1.2.1 (whenever):
- These versions were a single script that this author used his own use,
  and probably shared it with a few friends and colleagues. They weren't
  released publicly.