@@ -2,8 +2,8 @@
 <helpItems schema="maml" xmlns="http://msh">
   <command:command xmlns:maml="http://schemas.microsoft.com/maml/2004/10" xmlns:command="http://schemas.microsoft.com/maml/dev/command/2004/10" xmlns:dev="http://schemas.microsoft.com/maml/dev/2004/10" xmlns:MSHelp="http://msdn.microsoft.com/mshelp">
     <command:details>
-      <command:name>New-RandomPassword</command:name>
-      <command:verb>New</command:verb>
+      <command:name>Get-RandomPassword</command:name>
+      <command:verb>Get</command:verb>
       <command:noun>RandomPassword</command:noun>
       <maml:description>
         <maml:para>Creates a random password.</maml:para>
@@ -14,7 +14,7 @@
     </maml:description>
     <command:syntax>
       <command:syntaxItem>
-        <maml:name>New-RandomPassword</maml:name>
+        <maml:name>Get-RandomPassword</maml:name>
         <command:parameter required="true" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
           <maml:name>AsPlainText</maml:name>
           <maml:description>
@@ -75,9 +75,9 @@
         <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
           <maml:name>UseExtendedAscii</maml:name>
           <maml:description>
-            <maml:para>By default, the extended ASCII character set is not used.  Specify this switch to make your passwords more random and contain far more entropy.  However, you will no longer be able to type them on a standard keyboard.  In addition, some services may not permit these special characters.  However, specifying this switch greatly increases entropy, as the character pool is roughly doubled.</maml:para>
+            <maml:para>By default, the extended ASCII character set is not used.  Specify this switch to make your passwords more random and contain far more entropy.  However, you will no longer be able to type them easily on a standard keyboard.  In addition, some services may not permit these special characters.  However, specifying this switch greatly increases entropy, as the character pool is roughly doubled.</maml:para>
             <maml:para>If the -NoSymbols parameter is specified, then this parameter has no effect.</maml:para>
-            <maml:para>Note that this will not affect any words pulled from a wordlist.  If your wordlist contains extended ASCII (or Unicode) characters, NOT using this switch will have no effect.</maml:para>
+            <maml:para>When using WordList mode, this will only affect the separator characters.  It not affect any words pulled from a wordlist.</maml:para>
           </maml:description>
           <dev:type>
             <maml:name>SwitchParameter</maml:name>
@@ -87,7 +87,7 @@
         </command:parameter>
       </command:syntaxItem>
       <command:syntaxItem>
-        <maml:name>New-RandomPassword</maml:name>
+        <maml:name>Get-RandomPassword</maml:name>
         <command:parameter required="true" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
           <maml:name>AsPlainText</maml:name>
           <maml:description>
@@ -125,9 +125,9 @@
         <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
           <maml:name>UseExtendedAscii</maml:name>
           <maml:description>
-            <maml:para>By default, the extended ASCII character set is not used.  Specify this switch to make your passwords more random and contain far more entropy.  However, you will no longer be able to type them on a standard keyboard.  In addition, some services may not permit these special characters.  However, specifying this switch greatly increases entropy, as the character pool is roughly doubled.</maml:para>
+            <maml:para>By default, the extended ASCII character set is not used.  Specify this switch to make your passwords more random and contain far more entropy.  However, you will no longer be able to type them easily on a standard keyboard.  In addition, some services may not permit these special characters.  However, specifying this switch greatly increases entropy, as the character pool is roughly doubled.</maml:para>
             <maml:para>If the -NoSymbols parameter is specified, then this parameter has no effect.</maml:para>
-            <maml:para>Note that this will not affect any words pulled from a wordlist.  If your wordlist contains extended ASCII (or Unicode) characters, NOT using this switch will have no effect.</maml:para>
+            <maml:para>When using WordList mode, this will only affect the separator characters.  It not affect any words pulled from a wordlist.</maml:para>
           </maml:description>
           <dev:type>
             <maml:name>SwitchParameter</maml:name>
@@ -161,7 +161,7 @@
         </command:parameter>
       </command:syntaxItem>
       <command:syntaxItem>
-        <maml:name>New-RandomPassword</maml:name>
+        <maml:name>Get-RandomPassword</maml:name>
         <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="Count, MinLength, Size">
           <maml:name>Length</maml:name>
           <maml:description>
@@ -211,9 +211,9 @@
         <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
           <maml:name>UseExtendedAscii</maml:name>
           <maml:description>
-            <maml:para>By default, the extended ASCII character set is not used.  Specify this switch to make your passwords more random and contain far more entropy.  However, you will no longer be able to type them on a standard keyboard.  In addition, some services may not permit these special characters.  However, specifying this switch greatly increases entropy, as the character pool is roughly doubled.</maml:para>
+            <maml:para>By default, the extended ASCII character set is not used.  Specify this switch to make your passwords more random and contain far more entropy.  However, you will no longer be able to type them easily on a standard keyboard.  In addition, some services may not permit these special characters.  However, specifying this switch greatly increases entropy, as the character pool is roughly doubled.</maml:para>
             <maml:para>If the -NoSymbols parameter is specified, then this parameter has no effect.</maml:para>
-            <maml:para>Note that this will not affect any words pulled from a wordlist.  If your wordlist contains extended ASCII (or Unicode) characters, NOT using this switch will have no effect.</maml:para>
+            <maml:para>When using WordList mode, this will only affect the separator characters.  It not affect any words pulled from a wordlist.</maml:para>
           </maml:description>
           <dev:type>
             <maml:name>SwitchParameter</maml:name>
@@ -223,7 +223,7 @@
         </command:parameter>
       </command:syntaxItem>
       <command:syntaxItem>
-        <maml:name>New-RandomPassword</maml:name>
+        <maml:name>Get-RandomPassword</maml:name>
         <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
           <maml:name>NoSymbols</maml:name>
           <maml:description>
@@ -250,9 +250,9 @@
         <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
           <maml:name>UseExtendedAscii</maml:name>
           <maml:description>
-            <maml:para>By default, the extended ASCII character set is not used.  Specify this switch to make your passwords more random and contain far more entropy.  However, you will no longer be able to type them on a standard keyboard.  In addition, some services may not permit these special characters.  However, specifying this switch greatly increases entropy, as the character pool is roughly doubled.</maml:para>
+            <maml:para>By default, the extended ASCII character set is not used.  Specify this switch to make your passwords more random and contain far more entropy.  However, you will no longer be able to type them easily on a standard keyboard.  In addition, some services may not permit these special characters.  However, specifying this switch greatly increases entropy, as the character pool is roughly doubled.</maml:para>
             <maml:para>If the -NoSymbols parameter is specified, then this parameter has no effect.</maml:para>
-            <maml:para>Note that this will not affect any words pulled from a wordlist.  If your wordlist contains extended ASCII (or Unicode) characters, NOT using this switch will have no effect.</maml:para>
+            <maml:para>When using WordList mode, this will only affect the separator characters.  It not affect any words pulled from a wordlist.</maml:para>
           </maml:description>
           <dev:type>
             <maml:name>SwitchParameter</maml:name>
@@ -351,9 +351,9 @@
       <command:parameter required="false" variableLength="true" globbing="false" pipelineInput="False" position="named" aliases="none">
         <maml:name>UseExtendedAscii</maml:name>
         <maml:description>
-          <maml:para>By default, the extended ASCII character set is not used.  Specify this switch to make your passwords more random and contain far more entropy.  However, you will no longer be able to type them on a standard keyboard.  In addition, some services may not permit these special characters.  However, specifying this switch greatly increases entropy, as the character pool is roughly doubled.</maml:para>
+          <maml:para>By default, the extended ASCII character set is not used.  Specify this switch to make your passwords more random and contain far more entropy.  However, you will no longer be able to type them easily on a standard keyboard.  In addition, some services may not permit these special characters.  However, specifying this switch greatly increases entropy, as the character pool is roughly doubled.</maml:para>
           <maml:para>If the -NoSymbols parameter is specified, then this parameter has no effect.</maml:para>
-          <maml:para>Note that this will not affect any words pulled from a wordlist.  If your wordlist contains extended ASCII (or Unicode) characters, NOT using this switch will have no effect.</maml:para>
+          <maml:para>When using WordList mode, this will only affect the separator characters.  It not affect any words pulled from a wordlist.</maml:para>
         </maml:description>
         <command:parameterValue required="false" variableLength="false">SwitchParameter</command:parameterValue>
         <dev:type>
@@ -424,14 +424,14 @@
     <command:examples>
       <command:example>
         <maml:title>-------------------------- Example 1 --------------------------</maml:title>
-        <dev:code>PS C:\&gt; $secureStr = New-RandomPassword -Length 32</dev:code>
+        <dev:code>PS C:\&gt; $secureStr = Get-RandomPassword -Length 32</dev:code>
         <dev:remarks>
           <maml:para>Generates a 32-character password and saves it as a SecureString object.  This can be used in PowerShell scripts.  For one example, run Get-Help about_PSPasswordGenerator.</maml:para>
         </dev:remarks>
       </command:example>
       <command:example>
         <maml:title>-------------------------- Example 2 --------------------------</maml:title>
-        <dev:code>PS C:\&gt; New-RandomPassword -AsPlainText -Length 16
+        <dev:code>PS C:\&gt; Get-RandomPassword -AsPlainText -Length 16
 \#aT*fAg]u5$):%a</dev:code>
         <dev:remarks>
           <maml:para>Generates a 16-character password and prints it to the output stream.  You can then copy and paste it for use outside of PowerShell, or pipe it to a command such as Out-File to store it (probably insecurely).</maml:para>
@@ -439,7 +439,7 @@
       </command:example>
       <command:example>
         <maml:title>-------------------------- Example 3 --------------------------</maml:title>
-        <dev:code>PS C:\&gt; New-RandomPassword -AsPlainText -Words 3 -WordList 'mywordlist.txt'
+        <dev:code>PS C:\&gt; Get-RandomPassword -AsPlainText -Words 3 -WordList 'mywordlist.txt'
 stern4Trainer%exocycloida</dev:code>
         <dev:remarks>
           <maml:para>Generates a three-word password and prints it to the output stream.  You can then copy and paste it for use outside of PowerShell, or pipe it to a command such as Out-File to store it (probably insecurely).  Note that you must supply a wordlist to the cmdlet.</maml:para>
@@ -447,7 +447,7 @@ stern4Trainer%exocycloida</dev:code>
       </command:example>
       <command:example>
         <maml:title>-------------------------- Example 4 --------------------------</maml:title>
-        <dev:code>PS C:\&gt; $svcAccountPassword = New-RandomPassword -Length 240 -UseAmbigiousCharacters -UseExtendedAscii</dev:code>
+        <dev:code>PS C:\&gt; $svcAccountPassword = Get-RandomPassword -Length 240 -UseAmbigiousCharacters -UseExtendedAscii</dev:code>
         <dev:remarks>
           <maml:para>Generates a 240-character password that can be as random as possible.  This is good practice for making service accounts in Active Directory Domain Services, where a human will never need to type the password by hand.</maml:para>
         </dev:remarks>
