@@ -23,11 +23,11 @@ EXAMPLES
     #Requires -Module  PSPasswordGenerator
     
     # Create a long, secure password for this account.
-    $passwd = New-RandomPassword -Length 240 -UseExtendedAscii -UseAmbigiousCharacters
+    $passwd = Get-RandomPassword -Length 240 -UseExtendedAscii -UseAmbigiousCharacters
     
     # The rest of this example merely walks through creating an Active Directory
     # service account, and registering it with one server's DHCP Server service.
-    # If you wanted to learn how to use New-RandomPassword, you're all done now.
+    # If you wanted to learn how to use Get-RandomPassword, you're all done now.
     # If you're studying for a Microsoft exam then I recommend you keep reading!
     
     # Create the user account.  Splatting was added for readability.
@@ -140,20 +140,20 @@ CAVEAT 6, PROBABLY THE MOST OBVIOUS:  This doesn't save your passwords!
     - Tell it to a friend.  (Don't do this, either.)
 
 FINALLY, SOMETHING NOT DOOM AND GLOOM:  Aliases.
-    This cmdlet is named New-RandomPassword, as the author felt that "New" would
-    be the most appropriate verb to use with something like this.  But if you're
-    like me and always think to type Get-RandomPassword instead, don't worry.  I
-    have defined that as an alias.
+    This cmdlet used to be named New-RandomPassword.  Since the verb "New" might
+    imply that it can change system state, I've switched it back to "Get". There
+    is an alias, New-RandomPassword, so your scripts and muscle memory shall not
+    need any updates.
 
 SEE ALSO
-    For more information, run Get-Help New-RandomPassword.
+    For more information, run Get-Help Get-RandomPassword.
 
     You can also find this project online and send code or feedback by visiting:
     https://github.com/rhymeswithmogul/PSPasswordGenerator
 
 KEYWORDS
-    - New-RandomPassword
     - Get-RandomPassword
+    - New-RandomPassword
     - Password generator
     - Password maker
     - Random password
