@@ -3,9 +3,12 @@ Last update: 2022-03-17
 
 PSPasswordGenerator version 3.0.0, released 3/17/2022
 -----------------------------------------------------
-Not dead yet!  This version adds support for generating passwords that
-are made of random words.  Use the -Words and -WordList parameters and
-generate more readable passwords, like:
+Not dead yet!  In this version, the cmdlet's verb has been changed.  It
+is now called Get-RandomPassword (but New-RandomPassword still works.)
+
+Also, what makes it worth a major change?  We can now generate passwords
+that are made of random words.   Use the -Words and -WordList parameters
+and generate more readable passwords, like:
  * hemolytic<sheeptick=Planned                                                                         
  * Pachydermatouspowder³Est                                                                                  
  * blackberries<kitakyushu#imcompressibility%roadway
