@@ -1,6 +1,7 @@
 Version 3.0.0 (March 17, 2022):
-- We can now generate passwords with random words!  Bring your own word
-  list.
+- We can now generate human-friendly passwords from wordlists.
+- This cmdlet has been renamed Get-RandomPassword, as "Get" is a better
+  verb than "New" in this case.
 
 Version 2.0.1 (January 13, 2021):
 - Generated passwords are now properly removed from memory once they
